replace association_chain with nests as per super resources v2

--- a/app/views/nunchaku/resources/_breadcrumbs.html.erb
+++ b/app/views/nunchaku/resources/_breadcrumbs.html.erb
@@ -1,18 +1,18 @@
 <ul class="breadcrumb">
-  <% association_chain.each_with_index do |r, i| %>
+  <% nests.each_with_index do |r, i| %>
     <li>
       <%= link_to_unless_current r.class.model_name.human.pluralize,
-                  polymorphic_path(association_chain.take(i) + [r.class]) %>
+                  polymorphic_path(nests.take(i) + [r.class]) %>
     </li>
     <li>
-      <%= link_to_unless_current r.decorate, polymorphic_path(association_chain.take(i + 1)) %>
+      <%= link_to_unless_current r.decorate, polymorphic_path(nests.take(i + 1)) %>
     </li>
   <% end %>
 
   <% if resource? %>
     <li class="active">
       <%= link_to_unless_current resource_class.model_name.human.pluralize,
-                  polymorphic_path(association_chain + [resource_class]) %>
+                  polymorphic_path(nests + [resource_class]) %>
     </li>
     <li class="active"><%= resource %></li>
   <% else %>
