fix some stray with_chain references to refer to with_nesting, update the gem file with remote super_resources v2 version

--- a/app/views/nunchaku/resources/_file_form.html.erb
+++ b/app/views/nunchaku/resources/_file_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag 	[:import, with_chain(resource_class)].flatten, 
+<%= form_tag 	[:import, with_nesting(resource_class)].flatten, 
 							:class => 'form form-horizontal', 
 							:method => :post, 
 							:multipart => true do %>
