Make it easier to override polymorphic_path.

--- a/app/views/nunchaku/resources/_table_body.html.erb
+++ b/app/views/nunchaku/resources/_table_body.html.erb
@@ -1,6 +1,6 @@
 <tbody
   <% if nests.any? %>
-    chain="<%= polymorphic_path nests %>"
+    chain="<%= nested_resource_path nests %>"
   <% end %>
 >
   <%=
