Minor stuff for translations

--- a/app/views/application/_body.html.erb
+++ b/app/views/application/_body.html.erb
@@ -1,4 +1,4 @@
-<body class="<%= controller_name %> <%= action_name %>">
+<body class="<%= engine_name %> <%= controller_name %> <%= action_name %>">
   <%= render 'masthead' %>
 	<%= flash_content %>	
   <%= render 'content' %>
