--- a/app/views/nunchaku/resources/show.html.erb
+++ b/app/views/nunchaku/resources/show.html.erb
@@ -1,8 +1,8 @@
-<%= page_header(resource) %>
- 
+<%= content_header(resource) %>
+
 <div class="content_well well">
   <%= summary(resource.source) %>
   <%= tabs(resource.source) %>
- 
+
 	<%= render 'form' %>
 </div>
