changed how table partial gets the decorator class

--- a/app/views/nunchaku/resources/_table.html.erb
+++ b/app/views/nunchaku/resources/_table.html.erb
@@ -2,7 +2,7 @@
   <%=
     render :partial => 'table_header',
            :locals => {
-             :decorator_class => resource_class.decorator_class,
+             :decorator_class => decorator_class,
              :column_names => column_names
            }
   %>
