add bootstrap x-editable for edit-in-place

--- a/app/assets/stylesheets/nunchaku/application.css.scss
+++ b/app/assets/stylesheets/nunchaku/application.css.scss
@@ -1,6 +1,7 @@
 /*
  *= require_self
  *= require jquery.ui.all
+ *= require bootstrap3-editable/bootstrap-editable
  */
 
 @import "../inputs/enhanced_select";
