fix bad use of resource_instance_name; should be resource_params_name

--- a/app/views/nunchaku/resources/sortable.html.erb
+++ b/app/views/nunchaku/resources/sortable.html.erb
@@ -5,9 +5,9 @@
 <div class="content_well well">
   <div class="row">
     <div class="col-md-8 col-xs-8">
-      <ol id="<%= resource_instance_name %>_list">
+      <ol id="<%= resource_params_name %>_list">
         <% movable_collection.each do |r| %>
-          <li id="<%= "#{resource_instance_name}_#{r.id}" %>" class="<%= resource_instance_name %>" target="<%= r.id %>"><%= r %></li>
+          <li id="<%= "#{resource_params_name}_#{r.id}" %>" class="<%= resource_params_name %>" target="<%= r.id %>"><%= r %></li>
         <% end %>
       </ol>
     </div>
@@ -26,7 +26,7 @@
 
 <script type="text/javascript">
 	$(document).ready(function() {
-	  $('#<%= resource_instance_name %>_list').sortable({
+	  $('#<%= resource_params_name %>_list').sortable({
       placeholder: "ui-state-highlight",
       zIndex: 2700,
       opacity: 0.7,
@@ -34,10 +34,10 @@
       revert: true,
 
 			update: function(event, ui) {
-				$.post('/<%= resource_class.name.pluralize.underscore %>/sort', $('#<%= resource_instance_name %>_list').sortable('serialize'));
+				$.post('/<%= resource_class.name.pluralize.underscore %>/sort', $('#<%= resource_params_name %>_list').sortable('serialize'));
 			}
 		});
 
-    $('#<%= resource_instance_name %>_list').disableSelection();
+    $('#<%= resource_params_name %>_list').disableSelection();
   });
 </script>
