--- a/app/views/nunchaku/resources/index.html.erb
+++ b/app/views/nunchaku/resources/index.html.erb
@@ -4,11 +4,11 @@
 
 <div class="content_well well">
 	<div class="row">
-		<div class="col-md-10">
+		<div class="col-md-9 col-sm-8">
 			<%= render 'finder_form' %>
 		</div>
 
-		<div class="col-md-2">
+		<div class="col-md-3 col-sm-4">
 			<%= render 'pagination' %>
 		</div>
 	</div>
