--- a/app/views/nunchaku/resources/_finder_form.html.erb
+++ b/app/views/nunchaku/resources/_finder_form.html.erb
@@ -2,13 +2,12 @@
                     builder: SimpleForm::FormBuilder,
                     html: {class: 'form-inline'} do |f| %>
 
-  <div class="input-group">
+  <div class="input-group" style="width: 100%;">
     <span class="input-group-addon"><%= search_icon %></span>
 
 		<%= text_field_tag 	:term,
 			                  params[:term],
 			                  class: 'search-query form-control',
-	                      style: 'width: 100%;',
 			                  placeholder: t(:search_for, :models => human(resource_class).pluralize)
 		%>
 
