--- a/app/views/nunchaku/resources/report.html.erb
+++ b/app/views/nunchaku/resources/report.html.erb
@@ -8,10 +8,11 @@
 
 <div class="content_well well">
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-9 col-sm-8">
       <%= render "report_finder_form" rescue nil %>
     </div>
-    <div class="col-md-2">
+    
+    <div class="col-md-3 col-sm-4">
       <%= paginate paged_collection %>
     </div>
   </div>
