--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -1,1 +1,1 @@
-<%= link_to_unless current_page.last?, last_icon, url, :class => 'btn btn-primary', :remote => remote %>
+<%= link_to_unless current_page.last?, last_icon, url, :class => 'btn btn-primary', :remote => remote, :rel => 'nofollow' %>
