--- a/app/views/nunchaku/resources/file.js.erb
+++ b/app/views/nunchaku/resources/file.js.erb
@@ -1,10 +1,10 @@
 (function() {
   var modal = $("<%= escape_javascript(render('modal')) %>").appendTo("body"),
       form = $("<%= escape_javascript(render('file_form')) %>").closest("form");
-  
+
   modal.children().wrapAll(form.clone().empty());
 
-  $("<h3><%= I18n.t(:import) %> <%= resource_class.model_name.human.downcase %></h3>")
+  $("<h3><%= resource_class.model_name.human.capitalize %> <%= I18n.t(:import).downcase %></h3>")
     .appendTo(modal.find(".modal-header"));
   form.find(".form-actions").detach().children()
     .appendTo(modal.find(".modal-footer"));
