--- a/app/views/application/_masthead.html.erb
+++ b/app/views/application/_masthead.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nunchaku-navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -12,9 +12,17 @@
       <% end %>
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="nunchaku-navbar">
       <%= render 'navbar_left' %>
       <%= render 'navbar_right' %>
     </div>
   </div>
 </nav>
+
+<div class="current_session">
+  <div class="container">
+    <div class="row">
+      <%= render 'current_session' %>
+    </div>
+  </div>
+</div>
