--- a/app/views/application/_masthead.html.erb
+++ b/app/views/application/_masthead.html.erb
@@ -8,8 +8,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <%= link_to root_path, :class => 'navbar-brand' do %>
-      <% end %>
+      <%= render 'brand' %>
     </div>
 
     <div class="collapse navbar-collapse" id="nunchaku-navbar">
