Add gritter support and early stages of wicked pdf.

--- a/app/assets/stylesheets/nunchaku/application.css.scss
+++ b/app/assets/stylesheets/nunchaku/application.css.scss
@@ -2,6 +2,7 @@
  *= require_self
  *= require jquery.ui.all
  *= require bootstrap3-editable/bootstrap-editable
+ *= require gritter
  */
 
 @import "../inputs/enhanced_select";
