--- a/app/views/application/_body.html.erb
+++ b/app/views/application/_body.html.erb
@@ -1,6 +1,6 @@
 <body class="<%= engine_name %> <%= controller_name %> <%= action_name %>">
   <%= render 'masthead' %>
-	<%= flash_content %>	
+	<%= gflash %>	
   <%= render 'content' %>
   <%= render 'footer' %>
 </body>
