add rails env to body classes so we can highlight the env in pages

--- a/app/views/application/_body.html.erb
+++ b/app/views/application/_body.html.erb
@@ -1,6 +1,6 @@
-<body class="<%= engine_name %> <%= controller_name %> <%= action_name %>">
+<body class="<%= Rails.env %> <%= engine_name %> <%= controller_name %> <%= action_name %>">
   <%= render 'masthead' %>
-	<%= gflash %>	
+	<%= gflash %>
   <%= render 'content' %>
   <%= render 'footer' %>
 </body>
