--- a/app/views/nunchaku/resources/_table_body.html.erb
+++ b/app/views/nunchaku/resources/_table_body.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 >
   <%=
-    render :partial => 'table_row',
+    render :partial => 'table_row.html.erb',
            :collection => collection,
            :as => :resource,
            :locals => {
