--- a/app/views/nunchaku/resources/_report_content_footer.html.erb
+++ b/app/views/nunchaku/resources/_report_content_footer.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-5 col-md-offset-2 col-xs-5 col-xs-offset-2">
       <%= report_export_button %>
+      <%= pdf_button %>
     </div>
   </div>
 </div>
