do not call find method on collection page

--- a/app/views/nunchaku/resources/_breadcrumbs_parents.html.erb
+++ b/app/views/nunchaku/resources/_breadcrumbs_parents.html.erb
@@ -4,8 +4,8 @@
   </li>
 
   <% (r || parent).self_and_ancestors.each do |saa| %>
-    <li>
-      <%= link_to_unless_current saa.decorate, saa %>
-    </li>
-  <% end %>
+      <li>
+        <%= link_to_unless_current saa.decorate, saa %>
+      </li>
+  <% end if nested? %>
 </ul>
