Fix PDF stuff with stylesheets

--- a/app/views/nunchaku/resources/report.pdf.erb
+++ b/app/views/nunchaku/resources/report.pdf.erb
@@ -1,4 +1,4 @@
-<%= wicked_pdf_stylesheet_link_tag 'nunchaku/reports' %>
+<%= render :partial => 'report_css.html.erb' %>
 
 <% content_for :header do %>
     <div class="page-header page-header-tabbed">
