--- a/app/views/nunchaku/resources/_breadcrumbs_parents.html.erb
+++ b/app/views/nunchaku/resources/_breadcrumbs_parents.html.erb
@@ -3,8 +3,8 @@
     <%= link_to_unless_current resource_class.model_name.human.pluralize, polymorphic_path(resource_class) %>
   </li>
 
-  <% if nests.any? %>
-    <% (r || parent).self_and_ancestors.each do |saa| %>
+  <% if (p = (r || parent)).present? %>
+    <% p.self_and_ancestors.reverse.each do |saa| %>
       <li>
         <%= link_to_unless_current saa.decorate, saa %>
       </li>
