--- a/app/views/nunchaku/resources/_breadcrumbs.html.erb
+++ b/app/views/nunchaku/resources/_breadcrumbs.html.erb
@@ -2,17 +2,17 @@
   <% nests.each_with_index do |r, i| %>
     <li>
       <%= link_to_unless_current r.class.model_name.human.pluralize,
-                  polymorphic_path(nests.take(i) + [r.class]) %>
+                  engine_path(nests.take(i) + [r.class]) %>
     </li>
     <li>
-      <%= link_to_unless_current r.decorate, polymorphic_path(nests.take(i + 1)) %>
+      <%= link_to_unless_current r.decorate, engine_path(nests.take(i + 1)) %>
     </li>
   <% end %>
 
   <% if resource? %>
     <li class="active">
       <%= link_to_unless_current resource_class.model_name.human.pluralize,
-                  polymorphic_path(nests + [resource_class]) %>
+                  engine_path(nests + [resource_class]) %>
     </li>
     <li class="active"><%= resource %></li>
   <% else %>
