Turn off links in table headers for pdf reports.

--- a/app/views/nunchaku/resources/_table_header.pdf.erb
+++ b/app/views/nunchaku/resources/_table_header.pdf.erb
@@ -2,7 +2,7 @@
   <tr>
 	  <% column_names.each do |column| %>
 	    <th class="cell <%= column %>">
-				<%= decorator_class.table_heading(column) %>
+				<%= decorator_class.table_heading(column, false) %>
 	    </th>
 	  <% end %>
   </tr>
