--- a/app/views/nunchaku/resources/_table_footer.pdf.erb
+++ b/app/views/nunchaku/resources/_table_footer.pdf.erb
@@ -1,8 +1,7 @@
 <tr class="totals">
   <% column_names.each do |column| %>
     <td class="cell total <%= column %>">
-
-      <%= number_to_currency(report_totals[column]) if report_totals[column] %>
+      <%= report_totals[column].to_f.round(2) if report_totals[column] %>
     </td>
   <% end %>
 </tr>
