add loading partial for beyondadmin theme

--- a/app/views/application/_body.html.erb
+++ b/app/views/application/_body.html.erb
@@ -1,4 +1,5 @@
 <body class="<%= Rails.env %> <%= engine_name %> <%= controller_name %> <%= action_name %>">
+  <%= render 'loading' %>
   <%= render 'masthead' %>
 	<%= gflash %>
   <%= render 'content' %>
