--- a/app/views/nunchaku/resources/_finder_form.html.erb
+++ b/app/views/nunchaku/resources/_finder_form.html.erb
@@ -12,7 +12,7 @@
 		%>
 
     <span class="input-group-btn">
-		  <%= f.button :submit, t(:find), class: 'btn btn-info' %>
+		  <%= f.button :submit, t(:find), class: 'btn btn-info btn-block' %>
     </span>
   </div>
 <% end %>
