--- a/app/views/nunchaku/resources/index.html.erb
+++ b/app/views/nunchaku/resources/index.html.erb
@@ -2,7 +2,7 @@
 	<%= content_header %>
 <% end %>
 
-<div class="content_well well">
+<div class="tab-content">
 	<div class="row">
 		<div class="col-md-9 col-sm-8">
 			<%= render 'finder_form' %>
