--- a/app/views/nunchaku/resources/report.pdf.erb
+++ b/app/views/nunchaku/resources/report.pdf.erb
@@ -1,7 +1,7 @@
 <%= render :partial => 'report_css' %>
 <%= render :partial => 'report_header' %>
 
-<div class="content_well well">
+<div class="tab-content">
 
   <table class="table table-bordered table-striped table-condensed table-hover">
     <%=
