--- a/app/views/nunchaku/resources/show.html.erb
+++ b/app/views/nunchaku/resources/show.html.erb
@@ -1,6 +1,6 @@
 <%= content_header(resource) %>
 
-<div class="content_well well">
+<div class="tab-content">
   <%= summary(resource.source) %>
 
 	<%= render 'form' %>
