--- a/app/views/nunchaku/resources/report.html.erb
+++ b/app/views/nunchaku/resources/report.html.erb
@@ -6,7 +6,7 @@
     </div>
 <% end %>
 
-<div class="content_well well">
+<div class="tab-content">
   <div class="row">
     <div class="col-md-9 col-sm-8">
       <%= render "report_finder_form" rescue nil %>
