--- a/app/views/nunchaku/resources/sortable.html.erb
+++ b/app/views/nunchaku/resources/sortable.html.erb
@@ -2,7 +2,7 @@
   <%= content_header %>
 <% end %>
 
-<div class="content_well well">
+<div class="tab-content">
   <div class="row">
     <div class="col-md-8 col-xs-8">
       <ol id="<%= resource_params_name %>_list">
