--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -1,1 +1,1 @@
-  <%= link_to_unless current_page.first?, previous_icon, url, :class => 'btn btn-primary', :rel => 'prev', :remote => remote %>
+  <%= link_to_unless current_page.first?, previous_icon, url, :class => 'btn btn-info', :rel => 'prev', :remote => remote %>
