--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -1,1 +1,1 @@
-<%= link_to raw(t 'views.pagination.truncate'), '#', :class => 'btn btn-primary' %>
+<%= link_to raw(t 'views.pagination.truncate'), '#', :class => 'btn btn-info' %>
