refine the trash icon and the destroy form button

--- a/app/views/nunchaku/resources/_form_actions.html.erb
+++ b/app/views/nunchaku/resources/_form_actions.html.erb
@@ -6,7 +6,7 @@
                                :role => 'button',
                                :method => :delete,
                                :data => { confirm: t(:confirm) }) do %>
-      <i class="icon-trash"></i><%= t(:delete) %> <%= f.object.class.model_name.human %>
+      <%= trash_icon %> <%= t(:delete) %> <%= f.object.class.model_name.human %>
     <% end %>
   <% end %>
 </div>
