some basic styling for collection check boxes

--- a/app/assets/stylesheets/nunchaku/application.css.scss
+++ b/app/assets/stylesheets/nunchaku/application.css.scss
@@ -10,6 +10,13 @@
   }
 }
 
-.form-group.boolean {
-  margin-left: 20px !important;
+.collection_check_boxes {
+  padding: 0 1.5em 0.5em 0.5em;
+}
+
+
+.form-group {
+  .boolean {
+    margin-left: 20px !important;
+  }
 }
