--- a/app/assets/stylesheets/nunchaku/application.css.scss
+++ b/app/assets/stylesheets/nunchaku/application.css.scss
@@ -10,6 +10,12 @@
   }
 }
 
+.form-inline {
+  .boolean {
+    margin: -2px 0 0 0 !important;
+  }
+}
+
 .collection_check_boxes {
   padding: 0 1.5em 0.5em 0.5em;
 }
