--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -1,1 +1,1 @@
-<%= link_to_unless current_page.first?, first_icon, url, :class => 'btn btn-info', :remote => remote %>
+<%= link_to_unless current_page.first?, first_icon, url, :class => 'btn btn-paginator', :remote => remote %>
