--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -1,1 +1,1 @@
-<%= link_to_unless current_page.last?, next_icon, url, :class => 'btn btn-info', :rel => 'next', :remote => remote %>
+<%= link_to_unless current_page.last?, next_icon, url, :class => 'btn btn-paginator', :rel => 'next', :remote => remote %>
