--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -1,1 +1,1 @@
-<%= link_to page, page.current? ? '#' : url, {:class => "btn btn-info#{' active' if page.current?}", :remote => remote, :rel => page.next? ? 'next' : page.prev? ? 'prev' : nil} %>
+<%= link_to page, page.current? ? '#' : url, {:class => "btn btn-paginator#{' active' if page.current?}", :remote => remote, :rel => page.next? ? 'next' : page.prev? ? 'prev' : nil} %>
