tree-table class to table template for tree table

--- a/app/views/nunchaku/resources/_table.html.erb
+++ b/app/views/nunchaku/resources/_table.html.erb
@@ -1,4 +1,4 @@
-<table id="<%= resource_class.name.underscore %>_table" class="table table-bordered table-condensed table-hover" >
+<table id="<%= resource_class.name.underscore %>_table" class="<%= decorator_class.table_style %> table-bordered table-condensed table-hover" >
   <%=
     render :partial => 'table_header',
            :locals => {
