Revert "remove annotying case clashes on form submit buttons by overriding simple form default"
This reverts commit e07810800812cfc4f80e1083103e56f3d3efa467.

--- a/app/views/nunchaku/resources/_form_actions.html.erb
+++ b/app/views/nunchaku/resources/_form_actions.html.erb
@@ -1,5 +1,5 @@
 <div class="form-actions pull-right">
-  <%= f.submit t(:submit), :class => 'btn btn-primary submit' %>
+  <%= f.button :submit, :class => 'btn btn-primary submit' %>
 
   <% if f.deletable? %>
     <%= link_to(resource_path, :class => 'btn btn-danger',
