--- a/app/assets/stylesheets/nunchaku/application.css.scss
+++ b/app/assets/stylesheets/nunchaku/application.css.scss
@@ -31,6 +31,10 @@
   text-align: right;
 }
 
+.cell.save {
+  text-align: center;
+}
+
 @media only screen and (max-width: 880px) {
   .collection_check_boxes {
     padding: 0 1em 0.25em 0.25em;
