Attempt at making the tree refresh on new

--- a/app/views/nunchaku/resources/_form.html.erb
+++ b/app/views/nunchaku/resources/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(r) do |f| %>
+<%= simple_form_for r, :html => form_options do |f| %>
 	<%= f.error_notification %>
 
 	<% form_element_names.each do |e| %>
