Tree uses name attribute, but model won't always have 'name', so here we set it to the to_s

--- a/app/views/nunchaku/resources/create.tree.erb
+++ b/app/views/nunchaku/resources/create.tree.erb
@@ -1,1 +1,1 @@
-<%= raw resource.attributes.merge(:url => nest_url(resource), :move_url => move_url(resource)).to_json %>
+<%= raw resource.attributes.merge(:name => resource.to_s, :url => nest_url(resource), :move_url => move_url(resource)).to_json %>
