Add "spinner" modal to our footer buttons

--- a/app/views/application/_loading.html.erb
+++ b/app/views/application/_loading.html.erb
@@ -1,2 +1,9 @@
-<div class="loading-container loading-inactive">
+<div class="modal fade" id="spinner" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+  <div id="modal-tiny" class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="spinner"></div>
+      </div>
+    </div>
+  </div>
 </div>
