--- a/app/assets/stylesheets/nunchaku/application.css.scss
+++ b/app/assets/stylesheets/nunchaku/application.css.scss
@@ -44,3 +44,19 @@
     font-size: 0.8em;
   }
 }
+
+#modal-tiny {
+  width: 130px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0 0 0 0;
+}
+
+.spinner {
+  background-image: asset-url('nunchaku/spinner.gif');
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100px;
+}
