Use resource not decorator when checking edit permission on rich text editor

--- a/app/views/nunchaku/resources/_rich_text_widget.html.erb
+++ b/app/views/nunchaku/resources/_rich_text_widget.html.erb
@@ -5,7 +5,7 @@
         </span>
 
     <% if can_edit? %>
-        <%= edit_toggler(resource) %>
+        <%= edit_toggler %>
         <%= render 'widget_buttons' %>
     <% end %>
   </div>
