--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -1,10 +1,11 @@
 <head>
   <title><%= t("#{engine_name}_application_title") %></title>
-  <%= stylesheet_link_tag 'https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css' %>
+
+  <%= stylesheet_link_tag 'https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css' %>
   <%= stylesheet_link_tag 'application', :media => 'all' %>
 
-  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' %>
-  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js' %>
+  <%= javascript_include_tag 'https://code.jquery.com/jquery-1.11.1.min.js' %>
+  <%= javascript_include_tag 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js' %>
   <%= javascript_include_tag 'application' %>
 
   <meta name="viewport" content="width=device-width, maximum-scale=1.0">
