--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <title><%= t("#{engine_name}_application_title") %></title>
+  <title><%= title %></title>
   <%= stylesheet_link_tag 'application', :media => 'all' %>
   <%= javascript_include_tag 'application' %>
 
