fix pdf export footer css problem

--- a/app/views/nunchaku/resources/_report_css.pdf.erb
+++ b/app/views/nunchaku/resources/_report_css.pdf.erb
@@ -23,8 +23,8 @@
       page-break-inside: avoid;
   }
   .report-footer {
-    position: fixed;
-    bottom: 0;
+    position: absolute;
+    bottom: 20px;
   }
 </style>
 <%= render 'body_css' %>
