change email for documentation

--- a/app/views/nunchaku/resources/_documentation_header.html.erb
+++ b/app/views/nunchaku/resources/_documentation_header.html.erb
@@ -5,7 +5,7 @@
       <h4><%= documentation('title') %></h4>
       <p><%= documentation('description') %></p>
       <h5>Authentication</h5>
-      <p><%= simple_format(I18n.t('api_documentation.trade/api/invoices.authorisation', email: 'help@marketboomer.com'))%>
+      <p><%= simple_format(I18n.t('api_documentation.trade/api/invoices.authorisation', email: 'it@marketboomer.com'))%>
       <code><%= t('api_documentation.trade/api/invoices.authorisation_code')%></code></p>
       <h5>Testing</h5>
       <p><%= documentation('testing') %></p>
