--- a/app/views/nunchaku/resources/_report_css.pdf.erb
+++ b/app/views/nunchaku/resources/_report_css.pdf.erb
@@ -23,8 +23,7 @@
       page-break-inside: avoid;
   }
   .report-footer {
-    position: absolute;
-    bottom: 20px;
+    padding-top: 30px;
   }
 </style>
 <%= render 'body_css' %>
