group stock_take_listing by location

--- a/app/views/nunchaku/resources/_report_content.pdf.erb
+++ b/app/views/nunchaku/resources/_report_content.pdf.erb
@@ -1,7 +1,5 @@
-<%= render :partial => 'report_css' %>
-<%= render :partial => 'report_header' %>
 <%=
-    render :partial => 'report_content',
+    render :partial => 'report_table',
            :locals => {
                    :collection => collection,
                    :resource_class => resource_class,
