add page break for pdf report

--- a/app/views/nunchaku/resources/_report_css.pdf.erb
+++ b/app/views/nunchaku/resources/_report_css.pdf.erb
@@ -25,6 +25,10 @@
   .report-footer {
     padding-top: 30px;
   }
+
+  .report-break {
+    page-break-after: always;
+  }
 </style>
 <%= render 'body_css' %>
 <%= render 'cell_css' %>
