--- a/app/views/nunchaku/resources/_report_table.pdf.erb
+++ b/app/views/nunchaku/resources/_report_table.pdf.erb
@@ -1,5 +1,5 @@
 
-<div class="tab-content">
+<div class="tab-content report-break">
 
   <table class="table table-bordered table-striped table-condensed table-hover">
     <%=
