--- a/app/views/nunchaku/resources/_report_table.pdf.erb
+++ b/app/views/nunchaku/resources/_report_table.pdf.erb
@@ -1,33 +1,37 @@
+<div class="report-break">
+  <div class="tab-content">
 
-<div class="tab-content report-break">
+    <table class="table table-bordered table-striped table-condensed table-hover">
+      <%=
+          render :partial => 'table_header',
+                 :locals => {
+                         :resource_class => resource_class,
+                         :column_names => decorator_class.column_names
+                 }
+      %>
 
-  <table class="table table-bordered table-striped table-condensed table-hover">
-    <%=
-        render :partial => 'table_header',
-               :locals => {
-                       :resource_class => resource_class,
-                       :column_names => decorator_class.column_names
-               }
-    %>
+      <%=
+          render :partial => 'table_body',
+                 :locals => {
+                         :collection => collection,
+                         :resource_class => resource_class,
+                         :column_names => decorator_class.column_names
+                 }
+      %>
 
-    <%=
-        render :partial => 'table_body',
-               :locals => {
-                       :collection => collection,
-                       :resource_class => resource_class,
-                       :column_names => decorator_class.column_names
-               }
-    %>
+      <%=
+          render :partial => 'table_footer',
+                 :locals => {
+                         :collection => collection,
+                         :resource_class => resource_class,
+                         :column_names => decorator_class.column_names
+                 }
+      %>
+    </table>
+  </div>
 
-    <%=
-        render :partial => 'table_footer',
-               :locals => {
-                       :collection => collection,
-                       :resource_class => resource_class,
-                       :column_names => decorator_class.column_names
-               }
-    %>
-  </table>
+  <%= render :partial => 'report_footer' %>
 </div>
 
-<%= render :partial => 'report_footer' %>
+
+
