--- a/app/views/nunchaku/resources/_report_css.pdf.erb
+++ b/app/views/nunchaku/resources/_report_css.pdf.erb
@@ -29,6 +29,11 @@
   .report-break {
     page-break-after: always;
   }
+
+  .report-break:last-of-type {
+    page-break-after: auto;
+  }
+
 </style>
 <%= render 'body_css' %>
 <%= render 'cell_css' %>
