Added an extra param for hash node helper to take in

--- a/app/views/nunchaku/resources/_documentation_header.html.erb
+++ b/app/views/nunchaku/resources/_documentation_header.html.erb
@@ -24,6 +24,7 @@
           <% end %>
         </table>
       <% end %>
+      <p><code> <%= link_to(t('api_documentation.trade/api/invoices.download_button'), '/trade/api/invoices/1/json', :format => :text) %></code></p>
     </div>
   </div>
 </div>
