--- a/app/views/nunchaku/resources/_summary.html.erb
+++ b/app/views/nunchaku/resources/_summary.html.erb
@@ -6,7 +6,7 @@
       <dl class="capitalize">
         <% col.each do |sn| %>
           <dt class="<%= sn %>"><%= human_attr(summary.class, sn) %></dt>
-          <dd class="<%= sn %>"><%= summary.send(sn) %></dd>
+          <dd class="<%= sn %>"><%= inline_editor_for(summary.source, self).send(sn) %></dd>
         <% end %>
       </dl>
     </div>
